@@ -15,7 +15,8 @@ namespace mesmer
 
   double canonicalPartitionFunction(const vector<double>& DOS, const vector<double>& Ene, const double beta);
 
-  double canonicalMeanEnergy(const vector<double>& DOS, const vector<double>& Ene, const double beta);
+  // Calculate the mean and variance of a boltzmann distribution.
+  void canonicalMeanEnergy(const vector<double>& DOS, const vector<double>& Ene, const double beta, double& meanEnergy, double& varEnergy) ;
 
   // Calculate the average grain energy and then number of states per grain.
   void calcGrainAverages(const size_t &MaximumGrain, const size_t &cellPerGrain, const size_t &cellOffset, const std::vector<double>& shiftedCellDOS,
