@@ -28,7 +28,7 @@ namespace mesmer
     virtual bool countCellDOS(gDensityOfStates* mol, const MesmerEnv& env);
 
     // Function to calculate contribution to canonical partition function.
-    virtual void canPrtnFnCntrb(gDensityOfStates* gdos, double beta, double &PrtnFn, double &IntrlEne) ;
+    virtual void canPrtnFnCntrb(gDensityOfStates* gdos, double beta, double &PrtnFn, double &IntrlEne, double &varEne) ;
 
     // Function to return the number of degrees of freedom associated with this count.
     virtual unsigned int NoDegOfFreedom(gDensityOfStates* gdos) ;
@@ -140,9 +140,9 @@ namespace mesmer
   }
 
   // Calculate contribution to canonical partition function.
-  void Morse::canPrtnFnCntrb(gDensityOfStates* gdos, double beta, double &PrtnFn, double &IntrlEne) {
+  void Morse::canPrtnFnCntrb(gDensityOfStates* gdos, double beta, double &PrtnFn, double &IntrlEne, double &varEne) {
 
-    double qtot(1.0), ene(0.0) ; 
+    double qtot(1.0), ene(0.0), var(0.0) ; 
     for (size_t nFrq(0) ; nFrq < m_vibFreq.size() ; nFrq++ )
     {
       double vibFreq  = m_vibFreq[nFrq];
@@ -159,19 +159,21 @@ namespace mesmer
 
       // Calculate canonical partition function.
 
-      double qtmp(0.0),etmp(0.0) ;
+      double qtmp(0.0), etmp(0.0), vtmp(0.0) ;
       for (int n(0) ; n <= nmax ; n++ ) {
         double nu = double(n) ;
         double energy = nu*vibFreq + nu*(nu + 1)*anharmty ;
         qtmp += exp(-beta*energy) ;
         etmp += energy*exp(-beta*energy) ;
+        vtmp += energy*energy*exp(-beta*energy) ;
       }
       qtot *= qtmp ;
       ene  += etmp/qtmp ;
+      var  += vtmp/qtmp - (etmp*etmp)/(qtmp*qtmp) ;
     }
-
     PrtnFn   *= qtot ;
     IntrlEne += ene ;
+    varEne   += var ;
   }
 
   // Function to return the number of degrees of freedom associated with this count.
